# De-Boors-algorithm

./: CMakeLists.txt  README.md
python/: CMakeLists.txt
python/bindings/: splinekernel_python.cpp
splinekernel/: CMakeLists.txt
splinekernel/inc/: basisfunctions.hpp  curve.hpp
splinekernel/src/: curve.cpp
splinekernel/test/: deboor_test.cpp
